--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <version>1.0.1</version>
     </parent>
 
-    <groupId>javax.xml.bind</groupId>
+    <groupId>jakarta.xml.bind</groupId>
     <artifactId>jaxb-api-parent</artifactId>
     <version>2.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
