Project "groupId" changed to jakarta.xml.bind.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>

--- a/jaxb-api-test/pom.xml
+++ b/jaxb-api-test/pom.xml
@@ -14,7 +14,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>jaxb-api-parent</artifactId>
-        <groupId>javax.xml.bind</groupId>
+        <groupId>jakarta.xml.bind</groupId>
         <version>2.3.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -34,7 +34,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
+            <groupId>jakarta.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -82,7 +82,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>javax.xml.bind</groupId>
+                                    <groupId>jakarta.xml.bind</groupId>
                                     <artifactId>jaxb-api</artifactId>
                                     <version>${project.version}</version>
                                     <overWrite>true</overWrite>
