--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
     </parent>
 
     <groupId>jakarta.xml.bind</groupId>
@@ -191,7 +191,7 @@
 
    <profiles>
       <profile>
-            <id>jvnet-release</id>
+            <id>oss-release</id>
             <build>
                 <plugins>
                     <plugin>
