--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -24,12 +24,14 @@
 
     <properties>
         <config.dir>${project.basedir}/../etc/config</config.dir>
+        <legal.doc.source>${project.basedir}/..</legal.doc.source>
+        <java9.build.outputDirectory>${project.build.directory}/classes-java9</java9.build.outputDirectory>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>javax.activation-api</artifactId>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
         </dependency>
     </dependencies>
 
@@ -37,10 +39,6 @@
 
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
                 <plugin>
                     <groupId>org.glassfish.build</groupId>
                     <artifactId>gfnexus-maven-plugin</artifactId>
@@ -103,10 +101,6 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.1.1</version>
-                </plugin>
-                <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.1.0</version>
                     <configuration>
@@ -144,7 +138,7 @@
                             <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                         </archive>
                         <instructions>
-                            <Require-Capability>osgi.ee;filter:="(&amp;(osgi.ee=JavaSE)(version>=1.8))"</Require-Capability>
+                            <_noee>true</_noee>
                             <Bundle-Version>${project.version}</Bundle-Version>  <!-- 2.2.99.bnull -->
                             <Extension-Name>${extension.name}</Extension-Name>
                             <Implementation-Version>${spec.version}.${impl.version}</Implementation-Version>
@@ -174,9 +168,7 @@
                             </Import-Package>
                             <Bundle-SymbolicName>jaxb-api</Bundle-SymbolicName>
                             <DynamicImport-Package>org.glassfish.hk2.osgiresourcelocator</DynamicImport-Package>
-                            <Specification-Vendor>Oracle Corporation</Specification-Vendor>
-                            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
-                            <Implementation-Vendor-Id>org.glassfish</Implementation-Vendor-Id>
+                            <Specification-Vendor>${vendor.name}</Specification-Vendor>
                         </instructions>
                     </configuration>
                 </plugin>
@@ -214,18 +206,16 @@ JAXB ${project.version} Runtime Library</h2>
 ${project.name} specification, ${release.spec.date}<br>
 Comments to: <i><a href='mailto:${release.spec.feedback}'>${release.spec.feedback}</a></i><br>
 More information at: <i><a target='_top'
-href='http://jaxb.java.net'>http://jaxb.java.net</a></i><br>
+href='https://projects.eclipse.org/projects/ee4j.jaxb'>https://projects.eclipse.org/projects/ee4j.jaxb</a></i><br>
 &nbsp;<br>&nbsp;<br><hr width='65%'><h1>${project.name}</h1><hr width='75%'>
 <br>&nbsp;<br>]]>
                         </doctitle>
                         <header><![CDATA[JAXB<br>v${project.version}]]>
                         </header>
-                        <bottom><![CDATA[<font size=-1>
-<br>Comments to: <a href='mailto:${release.spec.feedback}'><i>${release.spec.feedback}</i></a>
-<br>More information at: <a target='_top'
-href='http://jaxb.java.net'><i>http://jaxb.java.net</i></a>
-<p>Copyright &copy; 2004-2017 Oracle </font>]]>
-                        </bottom>
+                    <bottom>
+                        <![CDATA[<br>Copyright &#169; {inceptionYear}&#x2013;{currentYear} {organizationName}.
+                        All rights reserved.<br>Comments to : <a href="mailto:${release.spec.feedback}">${release.spec.feedback}</a>.]]>
+                    </bottom>
                         <detectJavaApiLink>false</detectJavaApiLink>
                         <offlineLinks>
                             <offlineLink>
@@ -293,6 +283,7 @@ href='http://jaxb.java.net'><i>http://jaxb.java.net</i></a>
                 <artifactId>maven-resources-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>copy-sources</id>
                         <phase>generate-sources</phase>
                         <goals>
                             <goal>copy-resources</goal>
@@ -302,6 +293,36 @@ href='http://jaxb.java.net'><i>http://jaxb.java.net</i></a>
                             <resources>
                                 <resource>
                                     <directory>${basedir}/src/main/mr-jar</directory>
+                                </resource>
+                                <resource>
+                                    <targetPath>${project.build.outputDirectory}/META-INF</targetPath>
+                                    <directory>${legal.doc.source}</directory>
+                                    <includes>
+                                        <include>LICENSE.md</include>
+                                        <include>NOTICE.md</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-classes</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${java9.build.outputDirectory}</directory>
+                                </resource>
+                                <!-- Copy module-info.class to java >= 9 classes directory. Source file will be deleted later with ant. -->
+                                <resource>
+                                    <directory>${project.build.outputDirectory}</directory>
+                                    <includes>
+                                        <include>module-info.class</include>
+                                    </includes>
                                 </resource>
                             </resources>
                         </configuration>
@@ -327,6 +348,22 @@ href='http://jaxb.java.net'><i>http://jaxb.java.net</i></a>
                         <goals>
                             <goal>properties</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>copy</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>jakarta.activation</groupId>
+                                    <artifactId>jakarta.activation-api</artifactId>
+                                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -356,18 +393,32 @@ href='http://jaxb.java.net'><i>http://jaxb.java.net</i></a>
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.8</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant</artifactId>
+                        <version>1.10.5</version>
+                        <scope>compile</scope>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>compile-java9</id>
                         <phase>compile</phase>
                         <configuration>
                             <tasks>
-                                <mkdir dir="${project.build.outputDirectory}/META-INF/versions/9" />
-                                <javac srcdir="${mrjar.sourceDirectory}" destdir="${project.build.outputDirectory}/META-INF/versions/9" classpath="${project.build.outputDirectory}" includeantruntime="false" source="9" target="9" />
+                                <echo>${ant.version}</echo>
+                                <!-- Build Java 9+classes -->
+                                <mkdir dir="${java9.build.outputDirectory}"/>
+                                <javac srcdir="${mrjar.sourceDirectory}"
+                                       destdir="${java9.build.outputDirectory}"
+                                       classpath="${project.build.outputDirectory}"
+                                       modulepath="${project.build.directory}/modules"
+                                       includeantruntime="false" source="9" target="9">
+                                </javac>
                             </tasks>
                         </configuration>
                         <goals>
@@ -382,6 +433,19 @@ href='http://jaxb.java.net'><i>http://jaxb.java.net</i></a>
                                 <jar destfile="${project.build.directory}/jaxb-api-${project.version}-sources.jar" update="true">
                                     <fileset dir="${project.build.directory}/mr-jar/" />
                                 </jar>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                    <!-- Delete module-info.class from java < 9 classes directory. -->
+                    <execution>
+                        <id>update-target-classes</id>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                            <tasks>
+                                <delete file="${project.build.outputDirectory}/module-info.class"/>
                             </tasks>
                         </configuration>
                         <goals>
