--- a/jaxb-api-test/pom.xml
+++ b/jaxb-api-test/pom.xml
@@ -40,8 +40,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>javax.activation-api</artifactId>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
         </dependency>
     </dependencies>
 
@@ -51,6 +51,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <release>9</release>
+                    <compilerArgs>
+                        <arg>-verbose</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -76,7 +79,7 @@
                 <executions>
                     <execution>
                         <id>copy</id>
-                        <phase>test-compile</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>copy</goal>
                         </goals>
@@ -87,14 +90,14 @@
                                     <artifactId>jaxb-api</artifactId>
                                     <version>${project.version}</version>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${project.build.directory}/mods</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.activation</groupId>
-                                    <artifactId>javax.activation-api</artifactId>
+                                    <groupId>jakarta.activation</groupId>
+                                    <artifactId>jakarta.activation-api</artifactId>
                                     <version>${activation.version}</version>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${project.build.directory}/mods</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -127,10 +130,11 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <!--module-path ${project.build.directory}/modules/jakarta.activation-api-${activation.version}.jar -->
                     <argLine>
                         --add-modules java.xml.bind
-                        --upgrade-module-path ${project.build.directory}/mods/jaxb-api-${project.version}.jar
-                        --module-path ${project.build.directory}/mods/javax.activation-api-${activation.version}.jar
+                        --upgrade-module-path ${project.build.directory}/modules/jaxb-api-${project.version}.jar
+                        --module-path ${project.build.directory}/modules/jakarta.activation-api-${activation.version}.jar
                         --add-reads java.xml.bind=ALL-UNNAMED
                     </argLine>
                     <systemPropertyVariables>
