--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -168,8 +168,8 @@
                             </Import-Package>
                             <Bundle-SymbolicName>jaxb-api</Bundle-SymbolicName>
                             <DynamicImport-Package>org.glassfish.hk2.osgiresourcelocator</DynamicImport-Package>
-                            <Specification-Vendor>Oracle Corporation</Specification-Vendor>
-                            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
+                            <Specification-Vendor>${vendor.name}</Specification-Vendor>
+                            <Implementation-Vendor>${vendor.name}</Implementation-Vendor>
                             <Implementation-Vendor-Id>org.glassfish</Implementation-Vendor-Id>
                         </instructions>
                     </configuration>
